k8s/jackett/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: truenas-ripping-storage
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:0.22.450
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: ripping-storage
              mountPath: /output
            - name: truenas-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 9117
