k8s/jackett/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://jackett.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: jackett
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jackett
    gethomepage.dev/name: Jackett
    gethomepage.dev/widget.type: jackett
    gethomepage.dev/widget.url: http://jackett-service
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
spec:
  ingressClassName: nginx
  rules:
    - host: &host jackett.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
